--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ target/
 build/
 
 # Bindings
-**/**/libmopro_bindings.so
-**/**/libmopro_bindings.a
+**/libmopro_bindings.so
+**/libmopro_bindings.a
